--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
 
       <div class="grid-x">
 
+        <!-- Header -->
+        <div class="header">
+          <h1>Стартап кафе<br> FinTech</h1>
+        </div>
+
         <!-- 1 -->
         <div class="cell divider"></div>
         <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
@@ -94,12 +99,12 @@
 
         <div class="cell divider"></div>
 
-        <div class="cell medium-5 emerge"  data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
+        <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <p><b>Больше всего было представителей небольших компаний &mdash; 3-10 человек, но в целом аудитория сбалансирована</b></p>
           <div id="chart-portret-3"></div>
         </div>
         <div class="cell auto hide-for-small-only"></div>
-        <div class="cell medium-6 emerge"  data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
+        <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <p><b>Несмотря на достаточно молодой возраст, большинство компаний находится на стадии устойчивого развития</b></p>
           <div id="chart-portret-4"></div>
         </div>
