--- a/index.html
+++ b/index.html
@@ -155,18 +155,20 @@
         </div>
         <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <p><b>Участники мероприятия настроены оптимистично &mdash; почти <span>40%</span> считают, что никакие барьеры и трудности не мешают развитию их бизнеса</b></p>
+        </div>
+        <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <div id="chart-bareri"></div>
         </div>
 
-        <div class="cell divider"></div>
+        <!-- <div class="cell divider"></div> -->
 
-        <div class="cell">
+        <div class="cell medium-6">
           <div class="grid-x emerge toggle" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <div class="small-10 large-9 cell centered">
+            <div class="cell centered">
               <span class="aligned-center" style="font-size: 3rem;">1</span>
               <p><b>Отсутствие нормативов и законодательной базы, регулирующих деятельность</b></p>
             </div>
-            <div class="cell small-2 large-3 tap"></div>
+            <!-- <div class="cell small-2 large-3 tap"></div> -->
           </div>
           <div class="grid-x">
             <div class="cell pd-left">
@@ -185,11 +187,11 @@
           </div>
 
           <div class="grid-x emerge toggle" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <div class="small-10 large-9 cell centered">
+            <div class="cell centered">
               <span class="aligned-center" style="font-size: 3rem;">2</span>
               <p><b>Ограниченные возможности в получении финансирования, высокие налоги и отсутствие льгот</b></p>
             </div>
-            <div class="cell small-2 large-3 tap"></div>
+            <!-- <div class="cell small-2 large-3 tap"></div> -->
           </div>
           <div class="grid-x">
             <div class="cell pd-left">
@@ -200,11 +202,11 @@
           </div>
 
           <div class="grid-x emerge toggle" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <div class="small-10 large-9 cell centered">
+            <div class="cell centered">
               <span class="aligned-center" style="font-size: 3rem;">3</span>
               <p><b>Сложно находить партнеров и заказчиков</b></p>
             </div>
-            <div class="cell small-2 large-3 tap"></div>
+            <!-- <div class="cell small-2 large-3 tap"></div> -->
           </div>
           <div class="grid-x">
             <div class="cell pd-left">
@@ -219,11 +221,11 @@
           </div>
 
           <div class="grid-x emerge toggle" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <div class="small-10 large-9 cell centered">
+            <div class="cell centered">
               <span class="aligned-center" style="font-size: 3rem;">4</span>
               <p><b>Взаимодействие с государственными организациями</b></p>
             </div>
-            <div class="cell small-2 large-3 tap"></div>
+            <!-- <div class="cell small-2 large-3 tap"></div> -->
           </div>
           <div class="grid-x">
             <div class="cell pd-left">
@@ -236,11 +238,11 @@
           </div>
 
           <div class="grid-x emerge toggle" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <div class="small-10 large-9 cell centered">
+            <div class="cell centered">
               <span class="aligned-center" style="font-size: 3rem;">5</span>
               <p><b>Внутренние проблемы организации</b></p>
             </div>
-            <div class="cell small-2 large-3 tap"></div>
+            <!-- <div class="cell small-2 large-3 tap"></div> -->
           </div>
           <div class="grid-x">
             <div class="cell pd-left">
@@ -255,11 +257,11 @@
           </div>
 
           <div class="grid-x emerge toggle" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <div class="small-10 large-9 cell centered">
+            <div class="cell centered">
               <span class="aligned-center" style="font-size: 3rem;">6</span>
               <p><b>Рынок для продукта плохо развит / клиент не осознает потребность</b></p>
             </div>
-            <div class="cell small-2 large-3 tap"></div>
+            <!-- <div class="cell small-2 large-3 tap"></div> -->
           </div>
           <div class="grid-x">
             <div class="cell pd-left">
@@ -275,12 +277,14 @@
         </div>
         <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <p><b>Предсказуемо, самыми популярными мерами поддержки, которые предлагали участники, стали финансовые меры. Почти четверть не знают, что бы могло им помочь, либо считают, что справятся сами</b></p>
+        </div>
+        <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <div id="chart-meri"></div>
         </div>
 
-        <div class="cell divider"></div>
+        <!-- <div class="cell divider"></div> -->
 
-        <div class="cell">
+        <div class="cell medium-6">
           <div class="grid-x emerge toggle" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
             <div class="small-10 large-9 cell centered">
               <span class="aligned-center" style="font-size: 3rem;">1</span>
