--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <!-- Header -->
     <div class="grid-x header">
       <div class="cell logo-container">
-        <a class="logo logo--dpm" href="">Департамент предпринимательства</a>
-        <a class="logo logo--aim" href="">АИМ</a>
-        <a class="logo logo--cdp" href="">ЦДП</a>
+        <a class="logo logo--dpm" href="#">Департамент предпринимательства</a>
+        <a class="logo logo--aim" href="#">АИМ</a>
+        <a class="logo logo--cdp" href="#">ЦДП</a>
       </div>
       <h1 class="cell">
         <span class="header-name header-name--top">Стартап кафе</span><span class="header-name header-name--bottom">FinTech</span>
@@ -83,18 +83,21 @@
         <div class="cell medium-2">
           <p class="header__text">Генеральный<br>информационный партнер</p>
         </div>
-        <div class="cell medium-10 aligned">
+        <div class="cell medium-10 hide-for-small-only aligned">
           <p class="header__text">Информационные партнеры</p>
         </div>
         <div class="cell medium-2 logo-container">
-          <a href="" class="logo logo--partner-1">Rusbase</a>
+          <a href="#" class="logo logo--partner-1">Rusbase</a>
+        </div>
+        <div class="cell medium-10 hide-for-medium aligned">
+          <p class="header__text">Информационные партнеры</p>
         </div>
         <div class="cell medium-10 logo-container">
-          <a href="" class="logo logo--partner-2">TinTech Lab</a>
-          <a href="" class="logo logo--partner-3">StartTrack</a>
-          <a href="" class="logo logo--partner-4">FinTech Power</a>
-          <a href="" class="logo logo--partner-5">Bloom chain</a>
-          <a href="" class="logo logo--partner-6">ICT Moscow</a>
+          <a href="#" class="logo logo--partner-2">TinTech Lab</a>
+          <a href="#" class="logo logo--partner-3">StartTrack</a>
+          <a href="#" class="logo logo--partner-4">FinTech Power</a>
+          <a href="#" class="logo logo--partner-5">Bloom chain</a>
+          <a href="#" class="logo logo--partner-6">ICT Moscow</a>
         </div>
       </div>
       </div>
