--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
               <small><span>4%</span> HealthTech</small>
               <small><span>4%</span> Научные организации и ВУЗы</small>
             </div>
-            <div class="cell auto hide-for-small-only"></div>
-            <div class="cell medium-5">
+            <!-- <div class="cell auto hide-for-small-only"></div> -->
+            <div class="cell medium-6">
               <div id="chart-portret-2"></div>
             </div>
           </div>
