--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <p><b>только <span>41%</span> &mdash; FinTech</b></p>
           <div class="grid-x">
-            <div class="cell medium-6">
+            <div class="cell large-6">
               <p>Среди остальных компаний можно выделить несколько отраслей</p>
               <small><span>8%</span> Маркетинг и реклама</small>
               <small><span>7%</span> Промышленность и индустрия 4.0</small>
@@ -130,7 +130,7 @@
               <small><span>4%</span> Научные организации и ВУЗы</small>
             </div>
             <!-- <div class="cell auto hide-for-small-only"></div> -->
-            <div class="cell medium-6">
+            <div class="cell large-6">
               <div id="chart-portret-2"></div>
             </div>
           </div>
