--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
         <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <h3>Барьеры</h3>
         </div>
-        <div class="cell medium-3 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
+        <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <p><b>Участники мероприятия настроены оптимистично &mdash; почти 40% считают, что никакие барьеры и трудности не мешают развитию их бизнеса</b></p>
         </div>
 
         <div class="cell auto hide-for-small-only"></div>
 
-        <div class="cell medium-8 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
+        <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <div id="chart-bareri"></div>
         </div>
 
@@ -342,7 +342,7 @@
 
         <div class="cell auto hide-for-small-only"></div>
 
-        <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
+        <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <div id="chart-meri"></div>
         </div>
 
@@ -503,8 +503,7 @@
             </div>
           </div> -->
         <!-- </div> -->
-
-        <div class="cell divider"></div>
+        
         <div class="cell divider"></div>
         <div class="cell divider divider--dash"></div>
 
