--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 
 
-    <div class="grid-container grid-container-padded">
+    <div class="grid-container ">
 
       <div class="grid-x">
 
@@ -139,7 +139,7 @@
         <div class="cell divider"></div>
 
         <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>Больше всего было представителей небольших компаний &mdash; 3-10 человек, но в целом аудитория сбалансирована</b></p>
+          <p><b>Больше всего было представителей небольших компаний &mdash; 3-10 человек, но&nbsp;в&nbsp;целом аудитория сбалансирована</b></p>
           <div id="chart-portret-3"></div>
         </div>
         <div class="cell auto hide-for-small-only"></div>
@@ -155,7 +155,7 @@
           <h3>Барьеры</h3>
         </div>
         <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>Участники мероприятия настроены оптимистично &mdash; почти 40% считают, что никакие барьеры и трудности не мешают развитию их бизнеса</b></p>
+          <p><b>Участники мероприятия настроены оптимистично &mdash; почти 40% считают, что&nbsp;никакие барьеры и трудности не мешают развитию их бизнеса</b></p>
         </div>
 
         <div class="cell auto hide-for-small-only"></div>
@@ -315,7 +315,7 @@
           </div> -->
 
           <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>6. Рынок для продукта плохо развит / клиент не осознает потребность</b></p>
+            <p><b>6. Рынок для продукта плохо развит / клиент не&nbsp;осознает потребность</b></p>
             <p>Продукт или услуга компании новая (новым способом решает существующую проблему или решает проблему, которую потенциальный потребитель еще не осознал) и компания тратит много времени на объяснение эффектов и выгод </p>
           </div>
 
@@ -337,7 +337,7 @@
           <h3>Меры поддержки</h3>
         </div>
         <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>Предсказуемо, самыми популярными мерами поддержки, которые предлагали участники, стали финансовые меры. Почти четверть не знают, что бы могло им помочь, либо считают, что справятся сами</b></p>
+          <p><b>Предсказуемо, самыми популярными мерами поддержки, которые предлагали участники, стали финансовые меры. Почти четверть не&nbsp;знают, что&nbsp;бы могло им помочь, либо считают, что&nbsp;справятся сами</b></p>
         </div>
 
         <div class="cell auto hide-for-small-only"></div>
@@ -503,7 +503,7 @@
             </div>
           </div> -->
         <!-- </div> -->
-        
+
         <div class="cell divider"></div>
         <div class="cell divider divider--dash"></div>
 
