--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           </div> -->
 
           <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>2. Ограниченные возможности в получении финансирования, высокие налоги и отсутствие льгот</b></p>
+            <p><b>2. Ограниченные возможности в получении финансирования, высокие налоги и&nbsp;отсутствие льгот</b></p>
             <p>Участники отмечают недостаточный объем венчурного рынка в Москве и отсутствие выгодных кредитных схем</p>
             <p>Среди финансовых барьеров также отмечают высокие налоги и отсутствие каких-либо налоговых льгот для развивающегося бизнеса</p>
             <p>У инвесторов, которые могли бы стать драйверами в развитии стартапов, по мнению участников «нулевая толерантность к риску»: они не хотят вкладываться без гарантий возврата средств</p>
