--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 
 
-    <div class="grid-container ">
+    <div class="grid-container grid-container-padding">
 
       <div class="grid-x">
 
