--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <h3>Барьеры</h3>
         </div>
         <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>Участники мероприятия настроены оптимистично &mdash; почти 40% считают, что&nbsp;никакие барьеры и трудности не мешают развитию их бизнеса</b></p>
+          <p><b>Участники мероприятия настроены оптимистично &mdash; почти 40% считают, что&nbsp;никакие барьеры и&nbsp;трудности не&nbsp;мешают развитию их бизнеса</b></p>
         </div>
 
         <div class="cell auto hide-for-small-only"></div>
@@ -337,7 +337,7 @@
           <h3>Меры поддержки</h3>
         </div>
         <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>Предсказуемо, самыми популярными мерами поддержки, которые предлагали участники, стали финансовые меры. Почти четверть не&nbsp;знают, что&nbsp;бы могло им помочь, либо считают, что&nbsp;справятся сами</b></p>
+          <p><b>Предсказуемо, самыми популярными мерами поддержки, которые предлагали участники, стали финансовые меры. Почти четверть не&nbsp;знают, что&nbsp;бы&nbsp;могло им помочь, либо&nbsp;считают, что&nbsp;справятся сами</b></p>
         </div>
 
         <div class="cell auto hide-for-small-only"></div>
